# mboy

./: .gitignore  meson.build
include/: bios.hpp  common.hpp  cpu.hpp  debugger.hpp  memory.hpp
src/: cpu.cpp  cpu_opcode_init.cpp  debugger.cpp  main.cpp  memory.cpp
utils/: gen_opcodes.go  gen_opcodes.py
